--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,6 @@
 
 .AppMain {
   height: 640px;
-    margin: 3rem auto;
+    margin: 0;
     padding: .5rem 1.5rem;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
