--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -11,3 +11,10 @@
     border-radius: 20px;
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.16);
 }
+
+@media only screen and (min-width:600px) {
+    .Card {
+        max-width: 472px;
+        max-height: 246px;
+    }   
+}
